<resources>
    <string-array name="carType">
        <item>快车</item>
        <item>专车-舒适型</item>
        <item>专车-豪华型</item>
        <item>专车-七座商务型</item>
        <item>出租车</item>
    </string-array>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="app_name">点点服务</string>
    <string name="action_settings">settings</string>
    <string name="normal">普通地图</string>
    <string name="site">卫星地图</string>
    <string name="traffic">实时交通（off）</string>
    <string name="timeOfReach">3分钟</string>
    <string name="postion">这里上车</string>
    <string name="register"><![CDATA[< 注册 register]]></string>
    <string name="agree">最终版权归多乐朗科技所有</string>
    <string name="forgotPwd">忘记密码？</string>
    <string name="login">登 录</string>
    <string name="pwd">请输入密码</string>
    <string name="phone">请输入手机号</string>
    <string name="verificationCode">短信验证码</string>
    <string name="confirm">提    交</string>
    <string name="getVerificationCode">获 取</string>
    <string name="destination">目的地</string>
    <string name="placeOfDeparture">始发地</string>
    <string name="goNow">现在</string>
    <string name="timeToGo">出发时间</string>
    <string name="rePwd">请确认密码</string>
    <string name="commonAddress">常用地址</string>
    <string name="fanKui">问题反馈</string>
    <string name="app_update" >发现新版本</string>
    <string name="network">未连接网络 请检查wifi或数据是否开启</string>
    <string name="tip_jieSuan_1">* 每点击加减按钮一次，加价或减价一元</string>
    <string name="tip_jieSuan_2">* 点击价格文字可以直接输入金额</string>
    <string name="tip_jieSuan_3">* 过路费、远程费及其他费用由司机垫付，公司不参与提成，优惠券不能抵扣</string>
    <string name="tip_clear_fee">费用确认后 无法修改</string>
    <!--offlinemap-->
    <string name="beijing">"北京"</string>
    <string name="start">"开始"</string>
    <string name="pause">"暂停"</string>
    <string name="stop">"停止"</string>
    <string name="remove">"删除"</string>
    <string name="update">"更新"</string>
    <string name="logo_position">logo位置</string>
    <string name="bottom_left">左下</string>
    <string name="bottom_center">底部居中</string>
    <string name="bottom_right">右下</string>
    <string name="center_right">右中</string>
    <string name="map_screenshot">地图截屏</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="province">省</string>
    <string name="city">市</string>
    <string name="district">区/县</string>
    <string name="all_offline">所有城市</string>
    <string name="download_offline">下载管理</string>
    <string name="city_name">城市名称</string>
    <string name="city_size">城市大小</string>
    <string name="download_progress">0%</string>
    <string name="my_city">当前城市</string>
    <string name="sso_complete">完成</string>
    <string name="share_demo">短串分享</string>
    <string name="share_description">短串分享功能演示</string>
    <string name="weather_demo">天气查询</string>
    <string name="weather_description">天气预报功能</string>
    <string name="subpoi_demo">POI父子关系</string>
    <string name="subpoi_description">介绍POI的父子关系功能</string>
    <string name="weather_live">实时</string>
    <string name="weather_forecast">预报</string>
    <string name="report_time">发布时间</string>
    <string name="location_share">位置分享</string>
    <string name="route_share">路径规划分享</string>
    <string name="poi_share">POI分享</string>
    <string name="navi_share">导航分享</string>
    <string name="tip_modify_pay_pwd">确保身份证号码与验证身份时的证件号码一致，如未验证身份，请先验证身份再重置支付密码</string>

    <string name="traver_shunfengche">顺风车</string>
    <string name="traver_zhuanxian">专线</string>
    <string name="zhuanxian_type_jichang">机场</string>
    <string name="zhuanxian_type_chengji">城际</string>
    <string name="traver_type_shinei">市内</string>
    <string name="traver_type_chengji">城际</string>
    <string name="traver_type_jihuo">寄货</string>
    <string name="traver_type_zhuanxian">专线</string>
    <string name="peopleNumTip">请选择用车人数</string>
    <string name="jpushTip">第三方系统收不到推送的消息\n
    由于第三方 ROM 的管理软件,需要用户根据品牌手动操作\n
小米【MIUI】\n
自启动管理：需要把应用加到【自启动管理】列表，否则杀进程或重新开机后进程无法开启\n
通知栏设置：应用默认都是显示通知栏通知，如果关闭，则收到通知也不会提示\n
网络助手：可以手动禁止已安装的第三方程序访问2G/3G和WIFI的网络和设置以后新安装程序是否允许访问2G/3G和WIFI的网络\n
MIUI 7 神隐模式： 允许应用进行自定义配置模式，应用在后台保持联网可用，否则应用进入后台时，应用无法正常接收消息。【设置】下电量和性能中【神隐模式】\n
华为【Emotion】\n
自启动管理：需要把应用加到【自启动管理】列表，否则杀进程或重新开机后进程不会开启，只能手动开启应用\n
后台应用保护：需要手动把应用加到此列表，否则设备进入睡眠后会自动杀掉应用进程，只有手动开启应用才能恢复运行\n
通知管理：应用状态有三种：提示、允许、禁止。禁止应用则通知栏不会有任何提醒\n
魅族【Flyme】\n
自启动管理：需要把应用加到【自启动管理】列表，否则杀进程或重新开机后进程无法开启\n
通知栏推送：关闭应用通知则收到消息不会有任何展示\n
省电管理： 安全中心里设置省电模式，在【待机耗电管理】中允许应用待机时，保持允许，否则手机休眠或者应用闲置一段时间，无法正常接收消息。\n
VIVO【Funtouch OS】\n
内存一键清理：需要将应用加入【白名单】列表，否则系统自带的“一键加速”，会杀掉进程\n
自启动管理：需要将应用加入“i管家”中的【自启动管理】列表，否则重启手机后进程不会自启。但强制手动杀进程，即使加了这个列表中，后续进程也无法自启动。\n
OPPO【ColorOS】\n
冻结应用管理：需要将应用加入纯净后台，否则锁屏状态下无法及时收到消息\n
自启动管理：将应用加入【自启动管理】列表的同时，还需要到设置-应用程序-正在运行里锁定应用进程，否则杀进程或者开机后进程不会开启，只能手动开启应用\n
三星\n
内存一键优化：需要将应用加入【白名单】列表，否则系统内存优化后，会杀掉应用进程\n
</string>

    <string-array name="peopleNum">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="payType">
        <item>其它</item>
        <item>代收</item>
    </string-array>
</resources>
