<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login2">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/logo" />

    <LinearLayout
        android:id="@+id/ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_logo"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_logo"
            android:layout_marginTop="40dp"
            android:background="@drawable/shape_text"
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLength="11"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="#Fe8a03"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edt_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/shape_text"
            android:hint="@string/pwd"
            android:inputType="textPassword"
            android:maxLength="18"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="#Fe8a03"
            android:textSize="15sp" />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_login"
            android:padding="8dp"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/tv_forgotPwd"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/ly"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:background="#00000000"
        android:gravity="center_vertical"
        android:text="@string/forgotPwd"
        android:textSize="12sp" />

    <Button
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@id/tv_forgotPwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#00000000"
        android:text="@string/register"
        android:textColor="#Fe8a03"
        android:textSize="12sp" />


</RelativeLayout>
