<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login2"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="15dp"
        android:background="@drawable/bg_img_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/shape_text"
            android:hint="请输入原密码"
            android:inputType="phone"
            android:maxLength="11"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="#Fe8a03"
            android:textSize="15sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/shape_text"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/edt_newPwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:background="@null"
                android:digits="0123456789abcdefghigklmnopqrstuvwxyz"
                android:hint="@string/pwd"
                android:inputType="textPassword"
                android:maxLength="18"
                android:padding="8dp"
                android:singleLine="true"
                android:textColor="#Fe8a03"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/img_showPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/show_open" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/shape_text"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/edt_rePwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:background="@null"
                android:digits="0123456789abcdefghigklmnopqrstuvwxyz"
                android:hint="@string/rePwd"
                android:inputType="textPassword"
                android:maxLength="18"
                android:padding="8dp"
                android:singleLine="true"
                android:textColor="#Fe8a03"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/img_showPwd1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/show_open" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_modify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_login"
            android:padding="8dp"
            android:text="@string/confirm"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>
